@@ -19,7 +19,7 @@ if {$tcl_platform(byteOrder) eq "littleEndian"} {
 } else {
     set byteOrder 4321
 }
-critcl::cheaders -DTCL_BYTE_ORDER=$byteOrder
+critcl::cflags -DTCL_BYTE_ORDER=$byteOrder
 
 namespace eval ::sha2 {
     # Supporting code for the main command.
